--- a/viisikko.html
+++ b/viisikko.html
@@ -68,6 +68,10 @@ c) komento salt-call –local -l info state.single, ja sen perään
     <p>suorittaa komentoja; tässä tapauksessa luo kaktus2 -tiedoston, mikäli sitä ei ole olemassa</p>
     <br><img src="./Screenshot 2025-03-31 214204.png" alt="sama komento, mutta mitään ei tapahdu, koska kaktus2 on jo olemassa">
     <p>sama komento, mutta mitään ei muuteta, koska kaktus2 on jo olemassa</p>
-    
+
+    <p>
+        d) idempotenssi tarkoittaa, kun ollaan halutussa tilassa, ei suoriteta komentoja/toimintoja jotka mahdollistavat haluttuun tilaan pääsemisen, koska se on jo saavutettu. <br>
+        Tämä näkyy esimerkiksi, jos yrittää samaa komentoa monesti, ja ensimmäisellä kerralla komento toimii halutusti, muutoksia ei tapahdu.
+    </p>
 </body>
 </html>
