--- a/viisikko.html
+++ b/viisikko.html
@@ -70,7 +70,7 @@ c) komento salt-call –local -l info state.single, ja sen perään
     <p>sama komento, mutta mitään ei muuteta, koska kaktus2 on jo olemassa</p>
 
     <p>
-        d) idempotenssi tarkoittaa, kun ollaan halutussa tilassa, ei suoriteta komentoja/toimintoja jotka mahdollistavat haluttuun tilaan pääsemisen, koska se on jo saavutettu. <br>
+        d) idempotentti tarkoittaa, kun ollaan halutussa tilassa, ei suoriteta komentoja/toimintoja jotka mahdollistavat haluttuun tilaan pääsemisen, koska se on jo saavutettu. <br>
         Tämä näkyy esimerkiksi, jos yrittää samaa komentoa monesti, ja ensimmäisellä kerralla komento toimii halutusti, muutoksia ei tapahdu.
     </p>
 </body>
